cmake_minimum_required(VERSION 3.19)
project(char2)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")

# 指定头文件搜索路径
include_directories("${PROJECT_SOURCE_DIR}/2.6CustomDataType")
add_executable(2.1BasicType  2.1BasicType/main.cpp)
add_executable(2.2Variable 2.2Variable/main.cpp)
add_executable(2.2.4 2.2Variable/2.2.4practice.cpp)
add_executable(2.3.1 2.3CompositeType/reference.cpp)
add_executable(2.3.2 2.3CompositeType/poniter.cpp)
add_executable(2.3.3 2.3CompositeType/composite.cpp)
add_executable(2.4.2 2.4Const/constAndpointerOrRef.cpp)
add_executable(test_2.4.2 2.4Const/test.cpp)
add_executable(2.4.3 2.4Const/LowOrTopConst.cpp)
add_executable(2.5.2 2.5ProcessType/auto.cpp)
add_executable(2.5.3 2.5ProcessType/decltype.cpp)
add_executable(2.6.1 2.6CustomDataType/2.6.1practice.cpp)
add_executable(MySales_data 2.6CustomDataType/MySales_data.cpp)