cmake_minimum_required(VERSION 3.19)
project(chap3)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")
add_executable(3.2.1 3.2string/InitString.cpp)
add_executable(3.2.2 3.2string/MlutiString.cpp)
add_executable(practice3.2.2 3.2string/3.2.2practice.cpp)
add_executable(3.2.3 3.2string/ProcessCharInString.cpp)
add_executable(practice3.2.3 3.2string/3.2.3practice.cpp)
add_executable(3.3.1 3.3vector/InitVector.cpp)
add_executable(practice3.3.1 3.3vector/practice3.3.1.cpp)
add_executable(3.3.2 3.3vector/PushBackToVector.cpp)
add_executable(practice3.3.2 3.3vector/practice3.3.2.cpp)
add_executable(3.3.3 3.3vector/OtherMultiVector.cpp)
add_executable(practice3.3.3 3.3vector/practice3.3.3.cpp)
add_executable(3.4.1 3.4Iterator/UseIterator.cpp)
add_executable(practice3.4.1 3.4Iterator/practice3.4.1.cpp)
add_executable(3.4.2 3.4Iterator/IteratorArithmetic.cpp)
add_executable(practice3.4.2 3.4Iterator/practice3.4.2.cpp)
add_executable(3.5.1 3.5array/ArrayDefinitionAndInitialization.cpp)
add_executable(practice3.5.1 3.5array/practice3.5.1.cpp)
add_executable(3.5.2 3.5array/VisitArray.cpp)
add_executable(practice3.5.2 3.5array/practice3.5.2.cpp)
add_executable(3.5.3 3.5array/PointerAndArray.cpp)
add_executable(practice3.5.3 3.5array/practice3.5.3.cpp)
add_executable(3.5.4 3.5array/cstring.cpp)
add_executable(practice3.5.4 3.5array/practice3.5.4.cpp)
add_executable(3.5.5 3.5array/Interface2OldCode.cpp)
add_executable(practice3.5.5 3.5array/practice3.5.5.cpp)
add_executable(3.6 3.6MultiDimArray/multiDimArray.cpp)
add_executable(practice3.6 3.6MultiDimArray/practice3.6.cpp)