cmake_minimum_required(VERSION 3.19)
project(chap5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")

add_executable(5.1 5.1SimpleStatement/study.cpp)
add_executable(practice5.1 5.1SimpleStatement/practice5.1.cpp)
add_executable(5.2 5.2StatementScope/study.cpp)
add_executable(practice5.2 5.2StatementScope/practice5.2.cpp)
add_executable(5.3.1 5.3ConditionStatement/5.3.1if.cpp)
add_executable(practice5.3.1 5.3ConditionStatement/practice5.3.1.cpp)
add_executable(5.3.2 5.3ConditionStatement/5.3.2switch.cpp)
add_executable(practice5.3.2 5.3ConditionStatement/practice5.3.2.cpp)
add_executable(5.4.1 5.4IterativeStatements/5.4.1while.cpp)
add_executable(practice5.4.1 5.4IterativeStatements/practice5.4.1.cpp)
add_executable(5.4.2 5.4IterativeStatements/5.4.2TraditionalFor.cpp)
add_executable(practice5.4.2 5.4IterativeStatements/practice5.4.2.cpp)
add_executable(5.4.3 5.4IterativeStatements/5.4.3RangeFor.cpp)
add_executable(5.4.4 5.4IterativeStatements/5.4.4do_while.cpp)
add_executable(practice5.4.4 5.4IterativeStatements/practice5.4.4.cpp)
add_executable(5.5.1 5.5JumpStatement/5.5.1break.cpp)
add_executable(practice5.5.1 5.5JumpStatement/practice5.5.1.cpp)
add_executable(5.5.2 5.5JumpStatement/5.5.2continue.cpp)
add_executable(5.5.3 5.5JumpStatement/5.5.3go_to.cpp)
add_executable(practice5.5.2 5.5JumpStatement/practice5.5.2.cpp)
add_executable(practice5.5.3 5.5JumpStatement/practice5.5.3.cpp)
add_executable(5.6.1 5.6tryBlockAndException/5.6.1throw.cpp)
add_executable(5.6.2 5.6tryBlockAndException/5.6.2try_block.cpp)
add_executable(5.6.3 5.6tryBlockAndException/5.6.3stdException.cpp)
add_executable(practice5.6.4 5.6tryBlockAndException/practice5.6.3.cpp)